--- a/src/components/TimelineList.astro
+++ b/src/components/TimelineList.astro
@@ -1,134 +1,137 @@
 ---
-import { Icon } from 'astro-icon/components';
+import { Icon } from "astro-icon/components";
 
 interface Props {
-    title: string;
-    time: string;
-    companyLink: string;
-    companyName: string;
-    companyIcon: string;
-    className?: string;
+  title: string;
+  time: string;
+  companyLink: string;
+  companyName: string;
+  companyIcon: string;
+  className?: string;
 }
 
 const {
-    title,
-    time,
-    companyName,
-    companyLink,
-    companyIcon,
-    className = ''
+  title,
+  time,
+  companyName,
+  companyLink,
+  companyIcon,
+  className = "",
 } = Astro.props;
 ---
+
 <li class={`timeline-item ${className}`}>
-    <span class="timeline-item__icon">
-        <Icon name="calendar" title="Calendar" size="24"/>
-    </span>
-    <h3 class="timeline-item__title">{title}</h3>
-    <time class="timeline-item__time">{time}</time>
-    <div class="timeline-item-description-container">
-        <slot/>
-    </div>
-    <span class="timeline-item__company">
-        <a href={companyLink}
-           target="_blank"
-           rel="noopener noreferrer"
-           title={companyName}
-           aria-label={companyName}>
-            <Icon name={companyIcon} title={companyName} size="120"/>
-        </a>
-    </span>
+  <span class="timeline-item__icon">
+    <Icon name="calendar" title="Calendar" size="24" />
+  </span>
+  <h3 class="timeline-item__title">{title}</h3>
+  <time class="timeline-item__time">{time}</time>
+  <div class="timeline-item-description-container">
+    <slot />
+  </div>
+  <span class="timeline-item__company">
+    <a
+      href={companyLink}
+      target="_blank"
+      rel="noopener noreferrer"
+      title={companyName}
+      aria-label={companyName}
+    >
+      <Icon name={companyIcon} title={companyName} size="120" />
+    </a>
+  </span>
 </li>
 <style>
-    .timeline-item {
-        padding-left: 8px;
-        margin-bottom: 24px;
-        margin-left: 16px;
-        position: relative;
+  .timeline-item {
+    padding-left: 8px;
+    margin-bottom: 24px;
+    margin-left: 16px;
+    position: relative;
+  }
+  .timeline-item__icon {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: -28px;
+    top: 0;
+    box-shadow: 0 0 0 0.5rem var(--backgroud-color);
+    background-color: var(--backgroud-color);
+  }
+  .timeline-item__company {
+    display: none;
+  }
+  .timeline-item__icon svg {
+    color: var(--primary-color);
+  }
+  .timeline-item__title {
+    display: flex;
+    align-items: center;
+    margin-bottom: 4px;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 24px;
+    text-wrap: balance;
+    color: var(--primary-color);
+  }
+  .timeline-item__time {
+    display: block;
+    font-size: 1.6rem;
+    font-weight: lighter;
+    color: var(--secondary-color);
+  }
+  .timeline-item-description-container {
+    margin-top: 12px;
+    text-wrap: pretty;
+    font-weight: normal;
+    line-height: 24px;
+    color: var(--tertiary-color);
+
+    p {
+      font-size: 1.6rem;
     }
-    .timeline-item__icon {
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        left: -28px;
-        top: 0;
-        box-shadow: 0 0 0 0.5rem var(--backgroud-color);
-        background-color: var(--backgroud-color);
+
+    strong {
+      display: contents;
     }
+
+    li {
+      display: flex;
+      justify-content: start;
+      align-items: start;
+      margin-bottom: 8px;
+      font-size: 1.4rem;
+    }
+
+    li:before {
+      content: "\25A0";
+      padding: 0 12px;
+      color: var(--primary-color);
+    }
+  }
+  /* @media */
+  @media (min-width: 600px) {
     .timeline-item__company {
-        display: none;
-    }
-    .timeline-item__icon svg {
-        color: var(--primary-color);
-    }
-    .timeline-item__title {
-        display: flex;
-        align-items: center;
-        margin-bottom: 4px;
-        font-size: 1.8rem;
-        font-weight: 600;
-        line-height: 24px;
-        text-wrap: balance;
-        color: var(--primary-color);
-    }
-    .timeline-item__time {
-        display: block;
-        font-size: 1.6rem;
-        font-weight: lighter;
-        color: var(--secondary-color);
-    }
-    .timeline-item-description-container {
-        margin-top: 12px;
-        text-wrap: pretty;
-        font-weight: normal;
-        line-height: 24px;
-        color: var(--tertiary-color);
+      width: max-content;
+      height: 100%;
+      top: 0;
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-        p {
-            font-size: 1.6rem;
-        }
-
-        strong {
-            display: contents;
-        }
-
-        li {
-            display: flex;
-            justify-content: start;
-            align-items: start;
-            margin-bottom: 8px;
-            font-size: 1.4rem;
-        }
-
-        li:before {
-            content: '\25A0';
-            padding: 0 12px;
-            color: var(--primary-color);
-        }
+      a {
+        transition: transform linear 0.2s;
+      }
+      a:hover {
+        transform: scale(1.1);
+      }
     }
-    /* @media */
-    @media (min-width: 600px) {
-        .timeline-item__company {
-            width: max-content;
-            height: 100%;
-            top: 0;
-            position: absolute;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            a {
-                transition: transform linear .2s;
-            }
-            a:hover {
-                transform: scale(1.1);
-            }
-        }
-        .timeline-item--left .timeline-item__company {
-            right: -140px;
-        }
-        .timeline-item--right .timeline-item__company {
-            left: -140px;
-        }
+    .timeline-item--left .timeline-item__company {
+      right: -140px;
     }
+    .timeline-item--right .timeline-item__company {
+      left: -140px;
+    }
+  }
 </style>
