--- a/src/pages/es/works.astro
+++ b/src/pages/es/works.astro
@@ -1,14 +1,16 @@
 ---
-import Layout from '@layouts/Layout.astro';
-import WorksSection from '@sections/Works.astro';
-import { getLangFromUrl, useTranslations } from '@i18n/utils';
+import Layout from "@layouts/Layout.astro";
+import WorksSection from "@sections/Works.astro";
+import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<Layout title={t('title.works')}
-        description={t('description.works')}
-        keywords={t('keywords.works')}>
-    <WorksSection></WorksSection>
+<Layout
+  title={t("title.works")}
+  description={t("description.works")}
+  keywords={t("keywords.works")}
+>
+  <WorksSection />
 </Layout>
