--- a/src/components/CustomImage.astro
+++ b/src/components/CustomImage.astro
@@ -1,6 +1,6 @@
 ---
-import { Image } from 'astro:assets';
-import type { ImageMetadata } from 'astro';
+import { Image } from "astro:assets";
+import type { ImageMetadata } from "astro";
 
 interface Props {
   imagePath: string;
@@ -8,8 +8,8 @@ interface Props {
   width: number;
   height: number;
   className?: string;
-  loading?: 'eager' | 'lazy' | null | undefined;
-  quality?: 'low' | 'mid' | 'high' | 'max';
+  loading?: "eager" | "lazy" | null | undefined;
+  quality?: "low" | "mid" | "high" | "max";
 }
 
 const {
@@ -17,29 +17,35 @@ const {
   altText,
   width,
   height,
-  className = '',
-  loading = 'lazy',
-  quality = 'low'
+  className = "",
+  loading = "lazy",
+  quality = "low",
 } = Astro.props;
 
-const images = import.meta.glob<{ default: ImageMetadata }>('/src/assets/*.{jpeg,jpg,png,gif,webp}');
-if (!images[imagePath]) throw new Error('Path does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,webp}');
+const images = import.meta.glob<{ default: ImageMetadata }>(
+  "/src/assets/*.{jpeg,jpg,png,gif,webp}",
+);
+if (!images[imagePath])
+  throw new Error(
+    'Path does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,webp}',
+  );
 ---
 
 <Image
-        class={className}
-        src={images[imagePath]()}
-        width={width}
-        height={height}
-        loading={loading}
-        alt={altText}
-        quality={quality}/>
+  class={className}
+  src={images[imagePath]()}
+  width={width}
+  height={height}
+  loading={loading}
+  alt={altText}
+  quality={quality}
+/>
 <style>
-    img {
-        width: 100%;
-        height: 100%;
-        display: block;
-        object-fit: cover;
-        object-position: center;
-    }
+  img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+    object-position: center;
+  }
 </style>
