--- a/src/components/GoogleRecaptcha.astro
+++ b/src/components/GoogleRecaptcha.astro
@@ -1,6 +1,7 @@
 ---
-import { PUBLIC_RECAPTCHA_SITE_KEY } from 'astro:env/client';
+import { PUBLIC_RECAPTCHA_SITE_KEY } from "astro:env/client";
 
 const src = `https://www.google.com/recaptcha/api.js?trustedtypes=true&render=${PUBLIC_RECAPTCHA_SITE_KEY}`;
 ---
+
 <script is:inline src={src}></script>
