--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,8 +1,8 @@
 ---
-import { getLangFromUrl, useTranslations } from '@i18n/utils';
+import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
 interface Props {
-  name: 'works' | 'skills' | 'projects' | 'contact';
+  name: "works" | "skills" | "projects" | "contact";
 }
 
 const { name } = Astro.props;
@@ -12,52 +12,52 @@ const t = useTranslations(lang);
 ---
 
 <section class={`${name}-section`}>
-    <div class="title-container">
-        <h1 class="title"><span>#</span>{t(`section.${name}`)}</h1>
-        <div class="divider" aria-hidden="true"></div>
-    </div>
-    <slot/>
+  <div class="title-container">
+    <h1 class="title"><span>#</span>{t(`section.${name}`)}</h1>
+    <div class="divider" aria-hidden="true"></div>
+  </div>
+  <slot />
 </section>
 <style>
+  section {
+    width: 100%;
+    height: auto;
+    margin-bottom: 100px;
+    position: relative;
+  }
+  .title-container {
+    width: 100%;
+    height: auto;
+    margin: 12px 0 24px 0;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    overflow: hidden;
+  }
+  .divider {
+    width: 90%;
+    height: 1px;
+    margin-left: 12px;
+    background-color: var(--primary-color);
+  }
+  .title {
+    min-width: max-content;
+    font-weight: 400;
+    font-size: 24px;
+    text-wrap: balance;
+    color: var(--secondary-color);
+    span {
+      margin-right: 8px;
+      color: var(--primary-color);
+    }
+  }
+  /* @media */
+  @media (min-width: 600px) {
     section {
-        width: 100%;
-        height: auto;
-        margin-bottom: 100px;
-        position: relative;
+      margin-bottom: 130px;
     }
     .title-container {
-        width: 100%;
-        height: auto;
-        margin: 12px 0 24px 0;
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        overflow: hidden;
+      margin: 24px 0 40px 0;
     }
-    .divider {
-        width: 90%;
-        height: 1px;
-        margin-left: 12px;
-        background-color: var(--primary-color);
-    }
-    .title {
-        min-width: max-content;
-        font-weight: 400;
-        font-size: 24px;
-        text-wrap: balance;
-        color: var(--secondary-color);
-        span {
-            margin-right: 8px;
-            color: var(--primary-color);
-        }
-    }
-    /* @media */
-    @media (min-width: 600px) {
-        section {
-            margin-bottom: 130px;
-        }
-        .title-container {
-            margin: 24px 0 40px 0;
-        }
-    }
+  }
 </style>
