--- a/src/islands/select-language/select-language.css
+++ b/src/islands/select-language/select-language.css
@@ -1,18 +1,18 @@
 .language-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    --backgroud-icon-color: var(--tertiary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  --backgroud-icon-color: var(--tertiary-color);
 }
 .language-icon {
-    color: var(--backgroud-icon-color);
+  color: var(--backgroud-icon-color);
 }
 .language-container:hover {
-    --backgroud-icon-color: var(--secondary-color)
+  --backgroud-icon-color: var(--secondary-color);
 }
 
 .language-select {
-    padding: 0 0 0 6px;
-    color: var(--backgroud-icon-color);
+  padding: 0 0 0 6px;
+  color: var(--backgroud-icon-color);
 }
