--- a/src/sections/Contact.astro
+++ b/src/sections/Contact.astro
@@ -1,8 +1,8 @@
 ---
-import Section from '@components/Section.astro';
-import Geometry from '@components/Geometry.astro';
-import { ContactForm } from '@islands/contact-form/ContactForm';
-import { useTranslations, getLangFromUrl } from '@i18n/utils';
+import Section from "@components/Section.astro";
+import Geometry from "@components/Geometry.astro";
+import { ContactForm } from "@islands/contact-form/ContactForm";
+import { useTranslations, getLangFromUrl } from "@i18n/utils";
 
 const currentUrl = Astro.url;
 const lang = getLangFromUrl(currentUrl);
@@ -10,58 +10,59 @@ const t = useTranslations(lang);
 ---
 
 <Section name="contact">
-    <div class="contact-grid">
-        <div class="contact-container">
-            <h2 class="contact-title">{t('contact.section.title')}</h2>
-            <ContactForm
-                client:load
-                currentUrl={currentUrl}
-                subjectText={t('form.title.text')}
-                emailText={t('form.email.text')}
-                messageText={t('form.message.text')}
-                buttonText={t('form.button.text')}/>
-        </div>
-        <Geometry/>
+  <div class="contact-grid">
+    <div class="contact-container">
+      <h2 class="contact-title">{t("contact.section.title")}</h2>
+      <ContactForm
+        client:load
+        currentUrl={currentUrl}
+        subjectText={t("form.title.text")}
+        emailText={t("form.email.text")}
+        messageText={t("form.message.text")}
+        buttonText={t("form.button.text")}
+      />
     </div>
+    <Geometry />
+  </div>
 </Section>
 <style>
+  .contact-grid {
+    width: 100%;
+    height: 100%;
+  }
+  .contact-grid :global(.geometry) {
+    display: none;
+  }
+  .contact-container {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    max-width: 500px;
+    min-width: 300px;
+  }
+  .contact-title {
+    color: var(--tertiary-color);
+    font-size: 1.6rem;
+    font-weight: 500;
+    text-wrap: pretty;
+    line-height: 24px;
+    margin-top: 0;
+    margin-bottom: 24px;
+  }
+  /* @media */
+  @media (min-width: 700px) {
     .contact-grid {
-        width: 100%;
-        height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 40px;
     }
     .contact-grid :global(.geometry) {
-        display: none;
+      margin: 0 auto;
+      max-width: 450px;
+      width: 100%;
+      height: 100%;
+      display: block;
     }
-    .contact-container {
-        width: 100%;
-        height: 100%;
-        margin: 0 auto;
-        max-width: 500px;
-        min-width: 300px;
-    }
-    .contact-title {
-        color: var(--tertiary-color);
-        font-size: 1.6rem;
-        font-weight: 500;
-        text-wrap: pretty;
-        line-height: 24px;
-        margin-top: 0;
-        margin-bottom: 24px;
-    }
-    /* @media */
-    @media (min-width: 700px) {
-        .contact-grid {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            gap: 40px;
-        }
-        .contact-grid :global(.geometry) {
-            margin: 0 auto;
-            max-width: 450px;
-            width: 100%;
-            height: 100%;
-            display: block;
-        }
-    }
+  }
 </style>
