--- a/src/sections/Works.astro
+++ b/src/sections/Works.astro
@@ -1,8 +1,8 @@
 ---
-import Section from '@components/Section.astro';
-import Timeline from '@components/Timeline.astro';
+import Section from "@components/Section.astro";
+import Timeline from "@components/Timeline.astro";
 ---
 
 <Section name="works">
-    <Timeline/>
+  <Timeline />
 </Section>
